--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -26,6 +26,14 @@
             <a href="#testimonials" class="nav-link">Reviews</a>
             <a href="/pages/products" class="nav-cta">Shop</a>
             
+            {% comment %} Cart Icon {% endcomment %}
+            <button class="nav-cart-btn" id="nav-cart-btn" aria-label="Open cart" onclick="openCartDrawer()">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M3 3H5L5.4 5M7 13H17L21 5H5.4M7 13L5.4 5M7 13L4.7 15.3C4.3 15.7 4.6 16.5 5.1 16.5H17M17 13V17C17 18.1 17.9 19 19 19C20.1 19 21 18.1 21 17V13M9 19.5C9.8 19.5 10.5 20.2 10.5 21C10.5 21.8 9.8 22.5 9 22.5C8.2 22.5 7.5 21.8 7.5 21C7.5 20.2 8.2 19.5 9 19.5ZM20 19.5C20.8 19.5 21.5 20.2 21.5 21C21.5 21.8 20.8 22.5 20 22.5C19.2 22.5 18.5 21.8 18.5 21C18.5 20.2 19.2 19.5 20 19.5Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+                <span class="cart-count-badge" id="header-cart-count">{{ cart.item_count }}</span>
+            </button>
+            
             {% comment %} Partner Dashboard Link {% endcomment %}
             {% if customer.tags contains 'wholesale-partner' %}
                 <a href="/pages/partner-dashboard" class="nav-link nav-user" id="nav-user-link" title="Dashboard">
